# invoice-telegram-bot

./: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  ERROR_RECOVERY_SUMMARY.md  MASTER_SOLUTION.md  QUICKSTART.md  README.md  RECOVERY_FLOW_DIAGRAMS.md  circuit_breaker.py  dead_letter_queue.py  deployment_analysis.md  deployment_guide_railway.md  deployment_guide_render.md  document_processor.py  error_classification.py  fallback_chain.py  monitoring_logging.md  railway.json  resilient_invoice_agent_architecture.md  retry_mechanism.py  self_healing_agent.py  state_persistence.py  user_messages.py  webhook_setup.md
invoice_agent_bot/: .env.example  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
invoice_agent_bot/src/: __init__.py
invoice_agent_bot/src/bot/: __init__.py  handlers.py
invoice_agent_bot/src/core/: __init__.py  config.py  state.py
invoice_agent_bot/src/models/: __init__.py  invoice.py
invoice_agent_bot/src/services/: __init__.py  ai_client.py  document_processor.py  invoice_generator.py
invoice_agent_bot/src/utils/: __init__.py  error_recovery.py  logger.py  storage.py
invoice_agent_bot/tests/: __init__.py  conftest.py
invoice_agent_bot/tests/unit/: test_config.py  test_models.py
invoice_bot/: .env.example  CONVERSATION_FLOW.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  ai_integration.py  bot.py  config.py  document_processor.py  error_handler.py  invoice_data.py  invoice_generator.py  message_templates.py  orchestrator.py  requirements.txt  test_bot.py  watchdog.py  webhook_server.py
invoice_bot/e2b_agent/: __init__.py  agent.py  config.py  strategies.py
invoice_pipeline/: __init__.py  models.py  pipeline.py  utils.py  validators.py
invoice_pipeline/extractors/: __init__.py  docx_extractor.py  image_extractor.py  pdf_extractor.py  text_extractor.py
invoice_pipeline/tests/: test_pipeline.py
